--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -153,6 +153,10 @@
 
         a {
           margin-bottom: 5px;
+
+          &:hover{
+            color: #01a1b7;
+          }
         }
       }
     }
@@ -248,6 +252,11 @@
         border-radius: 10px;
         background: #01a1b7;
         color: #ffffff;
+        transition: 0.5s;
+
+        &:hover{
+          background: #2f00ff;
+        }
 
         @media screen and (max-width: 500px) {
           width: 100%;
