--- a/css/about-us-page.css
+++ b/css/about-us-page.css
@@ -30,6 +30,10 @@ a {
   transition: all 0.2s ease-in-out;
 }
 
+button {
+  cursor: pointer;
+}
+
 .header-wrapper {
   width: 100%;
   background: rgba(1, 161, 183, 0.05);
@@ -42,10 +46,6 @@ a {
     position: fixed;
     top: 0;
   }
-}
-
-.header.sticky {
-  padding-bottom: 30px;
 }
 
 .header {
@@ -130,10 +130,11 @@ a {
 }
 
 .header-links__wrapper {
+  position: relative;
   width: 100%;
   background-color: #ffffff;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  z-index: 999;
+  z-index: 99;
 }
 
 .sticky {
@@ -141,6 +142,12 @@ a {
   top: 0;
   width: 100%;
   transition: bottom 0.5s ease;
+  z-index: 999;
+}
+@media screen and (max-width: 1024px) {
+  .sticky {
+    margin-top: 78px;
+  }
 }
 
 .header-links {
@@ -179,12 +186,10 @@ a {
     margin-right: 10px;
   }
 }
-.header-links .navigation-links li .active {
-  transition: all 2s ease-out;
-}
 .header-links .navigation-links li .menu-link {
   position: relative;
   padding-bottom: 7px;
+  transition: all 0.5s ease-in-out;
 }
 .header-links .navigation-links li .menu-link::before {
   content: "";
@@ -193,7 +198,10 @@ a {
   width: 0;
   height: 3px;
   background: #f4c93f;
-  transition: all 0.5s linear;
+  transition: all 0.5s ease-in-out;
+}
+.header-links .navigation-links li .menu-link::before {
+  transition: all 0.5s ease-in-out;
 }
 .header-links .navigation-links li:hover a {
   color: #01a1b7;
@@ -663,8 +671,8 @@ a {
   padding-bottom: 50px;
 }
 .advantages-title {
-  font-family: "Montserrat" sans-serif;
-  font-size: 32px;
+  font-family: "Montserrat";
+  font-size: 36px;
   font-weight: 700;
 }
 @media screen and (max-width: 768px) {
@@ -682,10 +690,16 @@ a {
 .advantages-text {
   margin-top: 50px;
   font-family: "Montserrat" sans-serif;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 25px;
   opacity: 0.8;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 38px;
+}
+@media screen and (max-width: 768px) {
+  .advantages-text {
+    font-size: 20px;
+    line-height: 25px;
+  }
 }
 
 .advantages-content {
@@ -704,8 +718,8 @@ a {
   }
 }
 .advantages-content .card-image {
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -719,8 +733,8 @@ a {
   }
 }
 .advantages-content .card-image img {
-  width: 50%;
-  height: 50%;
+  width: 48px;
+  height: 48px;
 }
 .advantages-content .card-content {
   margin-left: 20px;
@@ -733,14 +747,14 @@ a {
 }
 .advantages-content .card-content__title {
   font-family: "Montserrat" sans-serif;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 700;
 }
 .advantages-content .card-content__text {
-  width: 70%;
   font-family: Montserrat;
-  font-size: 12px;
+  font-size: 16px;
   font-weight: 500;
+  line-height: 26px;
 }
 @media screen and (max-width: 768px) {
   .advantages-content .card-content__text {
@@ -776,13 +790,12 @@ a {
   height: 40px;
 }
 .doctor-quote__text {
-  width: 70%;
-  margin-top: 20px;
+  width: 90%;
   color: #fff;
   font-family: "Montserrat" sans-serif;
-  font-size: 18px;
   font-weight: 500;
-  line-height: 25px;
+  font-size: 24px;
+  line-height: 38px;
 }
 @media screen and (max-width: 768px) {
   .doctor-quote__text {
@@ -793,8 +806,8 @@ a {
   margin-top: 20px;
   color: #fff;
   font-family: "Montserrat" sans-serif;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 18px;
+  font-weight: 700;
   line-height: 25px;
 }
 
@@ -920,8 +933,13 @@ a {
 
 .recomendation-title {
   font-family: "Montserrat" sans-serif;
-  font-size: 32px;
+  font-size: 36px;
   font-weight: 700;
+}
+@media screen and (max-width: 768px) {
+  .recomendation-title {
+    font-size: 28px;
+  }
 }
 .recomendation-card {
   display: flex;
@@ -930,7 +948,7 @@ a {
 }
 @media screen and (max-width: 768px) {
   .recomendation-card {
-    flex-wrap: wrap;
+    flex-direction: column;
   }
 }
 .recomendation .card {
@@ -947,7 +965,7 @@ a {
 }
 @media screen and (max-width: 768px) {
   .recomendation .card {
-    width: 50%;
+    width: 80%;
   }
 }
 @media screen and (max-width: 500px) {
@@ -973,7 +991,7 @@ a {
   margin-top: 20px;
   text-align: center;
   font-family: "Montserrat" sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 500;
   line-height: 22px;
 }
