--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,10 +11,6 @@
   }
 }
 
-.header.sticky {
-  padding-bottom: 30px;
-}
-
 .header {
   display: flex;
   align-items: center;
@@ -98,10 +94,11 @@
 }
 
 .header-links__wrapper {
+  position: relative;
   width: 100%;
   background-color: #ffffff;
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
-  z-index: 999;
+  z-index: 99;
 }
 
 .sticky {
@@ -109,6 +106,11 @@
   top: 0;
   width: 100%;
   transition: bottom 0.5s ease;
+  z-index: 999;
+
+  @media screen and (max-width: 1024px) {
+    margin-top: 78px;
+  }
 }
 
 .header-links {
@@ -144,14 +146,10 @@
         margin-right: 10px;
       }
 
-      .active{
-        transition: all 2s ease-out;
-      }
-
       .menu-link {
         position: relative;
         padding-bottom: 7px;
-
+        transition: all 0.5s ease-in-out;
 
         &::before {
           content: "";
@@ -160,8 +158,12 @@
           width: 0;
           height: 3px;
           background: #f4c93f;
-          transition: all 0.5s linear;
+          transition: all 0.5s ease-in-out;
         }
+      }
+
+      .menu-link::before {
+        transition: all 0.5s ease-in-out;
       }
 
       &:hover a {
@@ -170,9 +172,7 @@
     }
     .active.menu-link::before {
       width: 25px;
-
     }
-    
   }
 
   .navigation-input {
@@ -236,3 +236,4 @@
     }
   }
 }
+
